--- a/HTML/pg117/task7/index.html
+++ b/HTML/pg117/task7/index.html
@@ -19,8 +19,8 @@
             <p class="title" >Welcome, stranger!</p>
             <p>You can easily book your tickets with us!</p>
             <div class="btn-horizontal-block">
-                <a class="btn">Concerts list</a>
-                <a class="btn">Book now</a>
+                <a class="btn" href="concerts.html">Concerts list</a>
+                <a class="btn" href="book.html">Book now</a>
             </div>
         </div>
     </div>
